--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid px-4">
-    <h1 class="mt-4">Dashboard</h1>
+    <h1 class="mt-4">Home</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Dashboard</li>
+        <li class="breadcrumb-item active">Home</li>
     </ol>
     <div class="row">
         <div class="col-xl-3 col-md-6">
@@ -9,7 +9,7 @@
                 <div class="card-body">Número de Conta</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <div class="small text-white">
-                      <i class="fas fa-angle-right">4335671234</i>
+                      <i class="fas fa-angle-right">{{accountNumber}}</i>
                     </div>
                 </div>
             </div>
@@ -19,7 +19,7 @@
                 <div class="card-body">Saldo</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <div class="small text-white">
-                      <i class="fas fa-angle-right">200.000,00 MZN</i>
+                      <i class="fas fa-angle-right">{{accountBalance}}</i>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
         <div class="col-xl-3 col-md-6">
             <div class="card bg-danger text-white mb-4">
                 <div class="card-body">Empréstimos</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
+                <div class="card-footer d-flex align-items-c enter justify-content-between">
                     <div class="small text-white">
                       <i class="fas fa-angle-right">500</i>
                     </div>
@@ -46,22 +46,49 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xl-6">
+        <div class="col-xl-8">
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-area me-1"></i>
-                    Area Chart Example
+                    Transfêrencias
                 </div>
-                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
             </div>
         </div>
-        <div class="col-xl-6">
+        <div class="col-xl-4">
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-chart-bar me-1"></i>
-                    Bar Chart Example
+                    Contactos Recentes
                 </div>
-                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                <div class="card-body">
+                    <table id="datatablesSimple" class="table">
+                        <thead>
+                            <tr>
+                                <th>Nome</th>
+                                <th>Número de Conta</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Belmiro Mungoi</td>
+                                <td>9834512345</td>
+                            </tr>
+                            <tr>
+                                <td>Belmiro Mungoi</td>
+                                <td>9834512345</td>
+                            </tr>
+                            <tr>
+                                <td>Belmiro Mungoi</td>
+                                <td>9834512345</td>
+                            </tr>
+                            <tr>
+                                <td>Belmiro Mungoi</td>
+                                <td>9834512345</td>
+                            </tr>
+                        </tbody>        
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -71,43 +98,33 @@
             Transações Recentes
         </div>
         <div class="card-body">
-            <table id="datatablesSimple">
+            <table id="datatablesSimple" class="table">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>Nome</th>
+                        <th>Número de Conta</th>
+                        <th>Valor</th>
+                        <th>Mensagem</th>
+                        <th>Tipo</th>
+                        <th>Data</th>
                     </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
-                    </tr>
-                </tfoot>
+                </thead>                
                 <tbody>
                     <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
+                        <td>Belmiro Mungoi</td>
+                        <td>9834512345</td>
+                        <td>20.000,00 MZN</td>
+                        <td>Transfêrencia Realizada</td>
+                        <td>TRANSFER</td>
                         <td>2011/04/25</td>
-                        <td>$320,800</td>
                     </tr>
                     <tr>
-                        <td>Garrett Winters</td>
-                        <td>Accountant</td>
-                        <td>Tokyo</td>
-                        <td>63</td>
+                        <td>Shelcia Jóse</td>
+                        <td>3245678904</td>
+                        <td>2.000,00 MZN</td>
+                        <td>Transfêrencia Realizada</td>
+                        <td>TRANSFER</td>
                         <td>2011/07/25</td>
-                        <td>$170,750</td>
                     </tr>
                 </tbody>
             </table>
